# vaimm

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
vaimm/: __main__.py  cli.py  net.py  tensorrt.py  vai.py  version.py
